<resources>
    <string name="app_name">Pharmacy on Duty</string>
    <string name="submit">Submit</string>
    <string name="nearby">Nearby Pharmacies</string>
    <string name="pharmacy_name">Pharmacy Name</string>
    <string name="pharmacy_address">Placeholder Blvd, Example Street, Num:01 County / City</string>
    <string name="show_on_google_maps">Show on Google Maps</string>
    <string name="phone_number">+90123456789</string>
    <string name="show_on_map">Show on map</string>
    <string name="county_name">County Name</string>
    <string name="distance">Distance: %1$.2f km</string>
    <string name="warning_county_not_selected">Select City/County</string>
    <string name="warning_connection_not_found">Internet Connection Not Found</string>
    <string name="warning_location_error">Location Error</string>
    <string name="warning_location_not_found">Location Not Found</string>
    <string name="warning_location_disabled">You need to enable Location</string>
    <string name="warning_location_permission">Location Permission Required</string>
    <string name="warning_call_permission">Phone Permission Required</string>
    <string name="allow">Allow</string>
    <string name="enable">Enable</string>
    <string name="your_location">Your Location</string>
    <string name="city_county">County / City</string>
    <string name="no_pharmacy_nearby">No pharmacy found in 5 km radius, please select a city and a county</string>
    <string name="no_pharmacy_in_selected_area">No pharmacy found in selected area</string>
    <string name="about">About the Application</string>
    <string name="about_dev">This application has been developed by <b>Yunus Emre GUL</b> and distributed for free to use. You can use the links below to give feedbacks.</string>
    <string name="about_api">API support of the application is provided by NosyAPI</string>
    <string name="share_with">Share with:</string>
    <string name="share">Share</string>
    <string name="about_share">If you want to share this application with people you know, you can scan the QR code with their devices or you can use the share button to share the link via other applications.</string>

</resources>